F&GDEV/src/objects/Subproject__c.object
<CustomObject>
    <description>Object utilized for Product Development efforts</description>
    <fields>
        <fullName>Actual_Expenses__c</fullName>
        <label>Actual Expenses</label>
        <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Expense__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Expense__c.Subproject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Change_Control_Outstanding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Control Outstanding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Variance__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Estimate_Count__c</fullName>
        <description>Backend field used to validate that only 1 related estimate has the &apos;Current&apos; checkbox selected.</description>
        <label>Current Estimate Count</label>
        <summaryFilterItems>
            <field>Estimate__c.Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Estimate__c.Subproject__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Estimate__c</fullName>
        <label>Current Estimate</label>
        <summarizedField>Estimate__c.Estimate__c</summarizedField>
        <summaryFilterItems>
            <field>Estimate__c.Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Estimate__c.Subproject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Firm_Estimate__c</fullName>
        <label>Current Firm Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Firm_Target_Date__c</fullName>
        <label>Current Firm Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Target_Date_Per_Estimate__c</fullName>
        <label>Current Target Date Per Estimate</label>
        <summarizedField>Estimate__c.Target_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Estimate__c.Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Estimate__c.Subproject__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Target_Date__c</fullName>
        <label>Current Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Close__c</fullName>
        <formula>IF(DATEVALUE(CreatedDate) &lt; Subproject_Close_Date__c, Subproject_Close_Date__c - DATEVALUE(CreatedDate), 0)</formula>
        <label>Days to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferred_Expenses__c</fullName>
        <label>Deferred Expenses</label>
        <summarizedField>Expense__c.Deferred_Amount__c</summarizedField>
        <summaryForeignKey>Expense__c.Subproject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Enhancement_Idea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enhancement Idea</label>
        <referenceTo>Enhancement_Ideas__c</referenceTo>
        <relationshipLabel>Subprojects</relationshipLabel>
        <relationshipName>Subprojects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclude_Project_Track_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Project Track Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Requested_Target_Date__c</fullName>
        <label>Initial Requested Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Billing_Date2__c</fullName>
        <label>Last Billing Date</label>
        <summarizedField>Expense__c.Expense_Date__c</summarizedField>
        <summaryForeignKey>Expense__c.Subproject__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Billing_Date__c</fullName>
        <label>Last Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Change_Control_Date__c</fullName>
        <label>Last Change Control Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Estimate_Added__c</fullName>
        <label>Last Estimate Added</label>
        <summarizedField>Estimate__c.CreatedDate</summarizedField>
        <summaryForeignKey>Estimate__c.Subproject__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legacy_PD_Database_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy PD Database ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Non_Product_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Product Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Activities</fullName>
                </value>
                <value>
                    <fullName>Ad Review</fullName>
                </value>
                <value>
                    <fullName>AgentIDs</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Enhancement Ideas</fullName>
                </value>
                <value>
                    <fullName>Estimates</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Files</fullName>
                </value>
                <value>
                    <fullName>FIlings</fullName>
                </value>
                <value>
                    <fullName>General Instance</fullName>
                </value>
                <value>
                    <fullName>HubSpot</fullName>
                </value>
                <value>
                    <fullName>Marketing Materials</fullName>
                </value>
                <value>
                    <fullName>Objections</fullName>
                </value>
                <value>
                    <fullName>Policy Forms</fullName>
                </value>
                <value>
                    <fullName>Policy Form States</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Product State Policy Form Associations</fullName>
                </value>
                <value>
                    <fullName>Product States</fullName>
                </value>
                <value>
                    <fullName>Projects</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Subprojects</fullName>
                </value>
                <value>
                    <fullName>Support Case</fullName>
                </value>
                <value>
                    <fullName>Trademarks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Subprojects</relationshipLabel>
        <relationshipName>Sub_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SubProject_Comments__c</fullName>
        <label>SubProject Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subproject_Category__c</fullName>
        <label>Subproject Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apex/Flow/Trigger</fullName>
                </value>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Field Addition</fullName>
                </value>
                <value>
                    <fullName>Field Removal</fullName>
                </value>
                <value>
                    <fullName>Hierarchy/Roles</fullName>
                </value>
                <value>
                    <fullName>Illustration Software</fullName>
                </value>
                <value>
                    <fullName>Integrations</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Object Creation</fullName>
                </value>
                <value>
                    <fullName>Page Layout Change</fullName>
                </value>
                <value>
                    <fullName>Policy Form Filing</fullName>
                </value>
                <value>
                    <fullName>Policy Print</fullName>
                </value>
                <value>
                    <fullName>Profiles/Permissions/Sets</fullName>
                </value>
                <value>
                    <fullName>Record Creation</fullName>
                </value>
                <value>
                    <fullName>Report Creation</fullName>
                </value>
                <value>
                    <fullName>Report Modification</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>System Development</fullName>
                </value>
                <value>
                    <fullName>System Setup</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Visualforce</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subproject_Close_Date__c</fullName>
        <label>Subproject Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subproject_Code_Description__c</fullName>
        <formula>Name &amp; &quot; - &quot; &amp; Subproject_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subproject Code Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subproject_Description__c</fullName>
        <label>Subproject Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subproject_Notes__c</fullName>
        <label>Subproject Notes</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Subproject_Status__c</fullName>
        <label>Subproject Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Blue - Pulled</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <description>Aggregation of expense amount related to the subproject.</description>
        <label>Total Expenses</label>
        <summarizedField>Expense__c.Expense_Amount__c</summarizedField>
        <summaryForeignKey>Expense__c.Subproject__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Subproject</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subproject_Description__c</columns>
        <columns>Project__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Consultant_Subprojects</fullName>
        <columns>NAME</columns>
        <columns>Subproject_Description__c</columns>
        <columns>SubProject_Comments__c</columns>
        <columns>Subproject_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Current_Target_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>contains</operation>
            <value>Consultant</value>
        </filters>
        <label>Consultant Subprojects</label>
    </listViews>
    <listViews>
        <fullName>Illustration_Software_Subprojects</fullName>
        <columns>NAME</columns>
        <columns>Subproject_Description__c</columns>
        <columns>Current_Target_Date__c</columns>
        <columns>SubProject_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subproject_Category__c</field>
            <operation>equals</operation>
            <value>Illustration Software</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>IS18</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Subproject__c.Subproject</value>
        </filters>
        <label>Illustration Software Subprojects</label>
    </listViews>
    <listViews>
        <fullName>Illustration_Software_Subprojects_Active</fullName>
        <columns>NAME</columns>
        <columns>Subproject_Description__c</columns>
        <columns>Current_Target_Date__c</columns>
        <columns>SubProject_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subproject_Category__c</field>
            <operation>equals</operation>
            <value>Illustration Software</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>IS18</value>
        </filters>
        <filters>
            <field>Subproject_Status__c</field>
            <operation>notEqual</operation>
            <value>Blue,Blue - Pulled,Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Subproject__c.Subproject</value>
        </filters>
        <label>Illustration Software Subprojects - Acti</label>
    </listViews>
    <listViews>
        <fullName>PD_Management_Subprojects</fullName>
        <columns>NAME</columns>
        <columns>Subproject_Description__c</columns>
        <columns>SubProject_Comments__c</columns>
        <columns>Subproject_Status__c</columns>
        <columns>Current_Target_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Subproject__c.PD_Ops_Subproject_Layout</value>
        </filters>
        <label>PD Management Subprojects</label>
        <sharedTo>
            <group>Admin</group>
            <role>PD_Managment</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sales_Subprojects</fullName>
        <columns>NAME</columns>
        <columns>Subproject_Description__c</columns>
        <columns>SubProject_Comments__c</columns>
        <columns>Subproject_Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Current_Target_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>Sales Changes in Salesforce 2018</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Subproject__c.PD_Ops_Subproject_Layout</value>
        </filters>
        <label>Sales Subprojects</label>
    </listViews>
    <nameField>
        <label>Subproject Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subprojects</pluralLabel>
    <recordTypes>
        <fullName>PD_Ops_Subproject_Layout</fullName>
        <active>true</active>
        <description>For product development operations only.</description>
        <label>PD Ops Subproject Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subproject</fullName>
        <active>true</active>
        <label>Subproject</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_One_Current_Estimate</fullName>
        <active>true</active>
        <description>Displays an error message if there is more than 1 current estimate related to the record.</description>
        <errorConditionFormula>Current_Estimate_Count__c&gt;1</errorConditionFormula>
        <errorMessage>You can only have one current estimate related to a subproject.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Unique_Subproject_Code</fullName>
        <active>true</active>
        <errorConditionFormula>and(or(isnew(),ischanged(Name)), 

Name=VLOOKUP($ObjectType.Subproject__c.Fields.Name,$ObjectType.Subproject__c.Fields.Name, Name))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>This is a duplicate Subproject Code.</errorMessage>
    </validationRules>
</CustomObject>